fix layout issues

--- a/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
+++ b/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
@@ -1,9 +1,17 @@
 ---
-slug: "/blog/in-app-reviews-android"
 title:  "Finally! In-App Reviews for Android using Playcore"
 date:   2020-08-22 14:00 +1100
-categories: post
 ---
+
+import '../style/main.scss';
+
+<div className="blog">
+
+
+# Finally! In-App Reviews for Android using Playcore
+
+<br/>
+<br/>
 
 One of the coolest things about writing iOS apps are it's high-level APIs, for example one of my favourite things is how you can prompt the user to leave a review
 without getting them to ever leave your app. The best part of this? The code to request a review is ALSO super concise, like so:
@@ -112,3 +120,5 @@ Now we can start our In-app Review flow, first by grabbing the `ReviewManager` t
 
 ### Demo
 <iframe width="414" height="711" src="./review_test.mp4" frameborder="0"> </iframe>
+
+</div>
