--- a/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
+++ b/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
@@ -1,12 +1,18 @@
 ---
-slug: "/blog/privacy-policy-handwash-hygiene"
 title:  "Privacy Policy - Handwash Hygiene"
 date:   2020-03-06 13:42 +1100
-categories: post
 ---
+
+<div className="blog">
+
+# Privacy Policy - Handwash Hygiene
+<br/>
+<br/>
 
 By using the "Handwash Hygiene" action on Google, the user agrees to abide by the privacy policy detailed here.
 
 This action does not collect, store or transmit any user data from the user's device whilst the action is in use, to any 3rd parties.
 
 The manufacturer of this action [embry.io](http://embry.io) will always endeavour to update this policy when any changes are made to this action's functionality.
+
+</div>
