--- a/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
+++ b/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
@@ -4,7 +4,7 @@ date:   2020-08-22 14:00 +1100
 ---
 
 import '../style/main.scss';
-import  review_test from './img/review_test.mp4'
+import  review_test from './images/review_test.mp4';
 
 <div className="blog">
 
