--- a/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
+++ b/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
@@ -1,10 +1,22 @@
 ---
-slug: "/blog/huxtable-preview-android-ios"
 title:  "App Preview - The Huxtable Saga (Android and iPhone)"
 date:   2020-02-12 13:42 +1100
-categories: post
 ---
-<p align="center">
- <iframe width="640" height="296" src="../images/huxtable-saga.mp4" frameborder="0" allowfullscreen>
- </iframe>
-</p>
+
+import '../style/main.scss';
+import huxtable_saga from './images/huxtable-saga.mp4';
+
+
+<div className="blog">
+
+<h1 align="center">
+App Preview - The Huxtable Saga (Android and iPhone)
+<br/>
+<br/>
+</h1>
+
+<div align="center">
+    <video width="50%" controls autostart autoPlay src={huxtable_saga} type="video/mp4" />
+</div>
+
+</div>
