--- a/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
+++ b/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
@@ -1,9 +1,18 @@
 ---
-slug: "/blog/testing-android-11-behaviour-changes"
 title:  "Testing behaviour changes in Android 11"
 date:   2020-04-25 19:00 +1100
-categories: post
 ---
+
+
+import '../style/main.scss';
+import behaviour_changes from './images/behaviour_changes.webm';
+
+
+<div className="blog">
+
+# Testing behaviour changes in Android 11
+<br/>
+<br/>
 
 Android 11’s dev preview 3 came out yesterday! Usually I ALWAYS get new previews and betas and do a quick compatibility test for apps I support, but with everything that’s been going on, its been super hectic! 😷
 
@@ -31,7 +40,11 @@ However, with this preview, I was pleasantly surprised to see targeting Android 
 
 Quick example video: If you target Android 11, your app won’t be able to show toasts with custom UI from the background (heh, I am sure you’ve migrated your toast messages to snackbars by now, 😬) but to test this behaviour, there’s a nifty little dev option under “App compatibility changes” and it provides a switch to turn this behaviour change ON or OFF 🕹
 
+<div align="center">
+<br/>
+<br/>
+<br/>
+    <video width="30%" controls autostart autoPlay src={behaviour_changes} type="video/mp4" />
+</div>
 
-<p align="center">
-<iframe width="414" height="711" src="../images/behaviour_changes.webm" frameborder="0"> </iframe>
-</p>
+</div>
