--- a/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
+++ b/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
@@ -1,9 +1,11 @@
 ---
-slug: "/blog/privacy-policy-aussie-slang-action"
 title:  "Privacy Policy - Aussie slang action on Google"
 date:   2019-05-14 13:42 +1100
-categories: post
 ---
+
+# Privacy Policy - Aussie slang action on Google
+<br/>
+<br/>
 
 By using the Aussie rules action on Google, the user agrees to abide by the privacy policy detailed here.
 
