--- a/src/pages/2019-06-01-IO-2019-a11y.mdx
+++ b/src/pages/2019-06-01-IO-2019-a11y.mdx
@@ -1,9 +1,15 @@
 ---
-slug: "/blog/io-2019-a11y"
 title:  "I/O 2019 and a11y"
 date:   2019-05-31 19:42 +1100
-categories: post
 ---
+
+
+import '../style/main.scss';
+import a11y from './images/a11y-2019.mp4';
+
+<div className="blog">
+
+# I/O 2019 and a11y
 
 I care very much about making truly accessible apps, so naturally the first session for I/O ‘19 I watched was “What’s new in Android accessibility?” 🐱 here are my key takeaways:
 
@@ -17,5 +23,7 @@ I care very much about making truly accessible apps, so naturally the first sess
 
 
 <p align="center">
-<iframe width="414" height="711" src="../images/a11y-2019.mp4" frameborder="0"> </iframe>
+ <video width="30%" controls autostart autoPlay src={a11y} type="video/mp4" />
 </p>
+
+</div>
