--- a/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
+++ b/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
@@ -3,6 +3,8 @@ title:  "Privacy Policy - Aussie slang action on Google"
 date:   2019-05-14 13:42 +1100
 ---
 
+<div className="blog">
+
 # Privacy Policy - Aussie slang action on Google
 <br/>
 <br/>
@@ -12,3 +14,5 @@ By using the Aussie rules action on Google, the user agrees to abide by the priv
 This action does not collect, store or transmit any user data from the user's device whilst the action is in use, to any 3rd parties.
 
 The manufacturer of this action [embry.io](http://embry.io) will always endeavour to update this policy when any changes are made to this action's functionality.
+
+</div>
