--- a/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
+++ b/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
@@ -5,6 +5,12 @@ date:   2018-03-25 00:00 +1100
 categories: post
 ---
 
+<div className="blog">
+
+# Privacy policy - Strayamate
+<br/>
+<br/>
+
 By using  this app, the user agrees to abide by the privacy policy as described below.
 
 This app does not collect, store or transmit any application or user data from the user's device to anywhere external to the device. The app also doesn't request any permissions to collect, store or transmit any application or user data at this stage, however in the future usage data may be recorded anonymously to ensure performance metrics are met.
@@ -15,4 +21,6 @@ No information is collected by the manufacturer of this app from the user's phon
 
 Any usage information that is collected by the respective distributing App stores is in addition and is not managed by the manufacturer of this app.
 
-The manufacturer of this app [embry.io or Harsh Overseer](http://embry.io) will always endeavour to update this policy when any changes are made to this app's functionality that impacts this particular privacy policy.
+The manufacturer of this app will always endeavour to update this policy when any changes are made to this app's functionality that impacts this particular privacy policy.
+
+</div>
