--- a/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
+++ b/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
@@ -5,17 +5,27 @@ date:   2019-03-18 19:30 +1100
 categories: post
 ---
 
+import below from './images/elbow.webm';
+
+<div className="blog">
+
 ## Android Q Beta.
 
 Its super easy to just [opt-in](https://www.google.com/android/beta) into the Android Beta program and test out the Android Q Beta! But if you're without a Pixel device, pretty much good luck. Nah, I sussed it out.
 
 Steps:
+
 - Get the Android Studio 3.4 (current RC is ok).
+
 - Get the Android Q SDK (it will probably say Android Q Preview).
+
 - In your app level `build.gradle`, change your `compileSdkVersion 'android-Q'` and your 
 `targetSdkVersion 'Q'` (Why are these TWO DIFFERENT VALUES!?!? SUPER CONFUSING!)
+
 - Update the emulator to 29+
+
 - Profit.
+
 - Now you're ready to test out some of the new features. Let's try `SettingsPanel`s - a new feature that lets users change OS level settings within your app.
 
 In an activity, define a button of sorts. In the `onClickListener` go:
@@ -27,6 +37,8 @@ startActivity(intent);
 
 Here's what it looks like. Basically, the sound is not turned on, so when you tap on the pronunciation button, it doesn't work. Settings panels to the rescue! (even though the collapsible animation is super dodgey), you turn the volume on within the app and voila! it works. Sweet as!
 
-<p align="center">
-<iframe width="414" height="711" src="../images/elbow.webm" frameborder="0"> </iframe>
-</p>
+<div align="center">
+    <video width="30%" controls autostart autoPlay src={below} />
+</div>
+
+</div>
