--- a/src/pages/2017-03-31-Privacy-Policy-StrayaMate.mdx
+++ b/src/pages/2017-03-31-Privacy-Policy-StrayaMate.mdx
@@ -5,6 +5,12 @@ date:   2017-03-31 13:42 +1100
 categories: post
 ---
 
+<div className="blog">
+
+# Privacy Policy - Strayamate
+<br/>
+<br/>
+
 By using  this app, the user agrees to abide by the privacy policy as described below.
 
 This app does not collect, store or transmit any application or user data from the user's device to anywhere external to the device. The app also doesn't request any permissions to collect, store or transmit any application or user data at this stage, however in the future usage data may be recorded anonymously to ensure performance metrics are met.
@@ -16,3 +22,5 @@ No information is collected by the manufacturer of this app from the user's phon
 The manufacturer of this app [embry.io](http://embry.io) will always endeavour to update this policy when any changes are made to this app's functionality that impacts this particular privacy policy.
 
 Addendum: When used with a 3rd party ads provider, the provider may collect some personally identifiable information of the user in order to serve ads that are appropriate to the user. This is not facilitated by the manufacturer of the app, but the 3rd party ads provider.
+
+</div>
