--- a/src/pages/2017-01-03-Multiple-EditTexts-in-Android.mdx
+++ b/src/pages/2017-01-03-Multiple-EditTexts-in-Android.mdx
@@ -7,7 +7,7 @@ categories: post
 
 import three from './images/3.png';
 
-<div className="blog">
+<div className="blogText">
 
 # Multiple EditTexts in Android
 
