--- a/src/pages/2017-03-31-Privacy-Policy-StrayaMate.mdx
+++ b/src/pages/2017-03-31-Privacy-Policy-StrayaMate.mdx
@@ -5,7 +5,7 @@ date:   2017-03-31 13:42 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Strayamate
 <br/>
