--- a/src/pages/2017-11-17-Google-Play-games-for-fun-and-profit-but-mostly-fun.mdx
+++ b/src/pages/2017-11-17-Google-Play-games-for-fun-and-profit-but-mostly-fun.mdx
@@ -12,7 +12,7 @@ import leaderboards from './images/play-games/configure-leaderboards.png';
 import achievements from './images/play-games/configure-achievements.png';
 import sign_in from './images/play-games/alert-to-sign-in.png';
 
-<div className="blog">
+<div className="blogText">
 
 # Google play games API for fun and profit - but mostly only fun.
 
