--- a/src/pages/2017-12-09-App-monetisation-and-In-App-Billing-implementation.mdx
+++ b/src/pages/2017-12-09-App-monetisation-and-In-App-Billing-implementation.mdx
@@ -5,7 +5,7 @@ date:   2017-12-08 19:30 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Android apps and monetisation.
 <br/>
