--- a/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
+++ b/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
@@ -7,7 +7,7 @@ categories: post
 
 import below from './images/elbow.webm';
 
-<div className="blog">
+<div className="blogText">
 
 ## Android Q Beta.
 
