--- a/src/pages/2019-04-14-Foldable-emulators-in-Android-Studio.mdx
+++ b/src/pages/2019-04-14-Foldable-emulators-in-Android-Studio.mdx
@@ -6,7 +6,7 @@ date:   2019-04-14 19:30 +1100
 
 import foldable_emulators from './images/foldable_emulators.mp4'
 
-<div className="blog">
+<div className="blogText">
 
 ## Foldable emulators in Android Studio - or as I like to call it, the beginning of the end
 
