--- a/src/pages/2019-09-28-Relasing-an-app.mdx
+++ b/src/pages/2019-09-28-Relasing-an-app.mdx
@@ -19,7 +19,7 @@ import in_review from './images/in-review.png';
 import beta from './images/beta.png';
 import beta_test from './images/beta-test.png';
 
-<div className="blog">
+<div className="blogText">
 
 <h1 align="center"> App releases on the Play Console </h1>
 <br/>
