--- a/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
+++ b/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
@@ -6,7 +6,7 @@ date:   2020-02-12 13:42 +1100
 import huxtable_saga from './images/huxtable-saga.mp4';
 
 
-<div className="blog">
+<div className="blogText">
 
 <h1 align="center">
 App Preview - The Huxtable Saga (Android and iPhone)
