--- a/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
+++ b/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
@@ -6,7 +6,7 @@ date:   2020-04-25 19:00 +1100
 import behaviour_changes from './images/behaviour_changes.webm';
 
 
-<div className="blog">
+<div className="blogText">
 
 # Testing behaviour changes in Android 11
 <br/>
