--- a/src/pages/2016-12-30-Does-this-even-work.mdx
+++ b/src/pages/2016-12-30-Does-this-even-work.mdx
@@ -5,7 +5,7 @@ date:   2016-12-30 07:42 +1100
 
 import '../style/main.scss';
 
-<div className="blog">
+<div className="blogText">
 
 # Does this even work?
 
