--- a/src/pages/2016-12-30-License-details.mdx
+++ b/src/pages/2016-12-30-License-details.mdx
@@ -5,7 +5,7 @@ date:   2016-12-30 07:42 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # License details
 <br/>
