--- a/src/pages/2017-01-21-Programmatic-button-generation.mdx
+++ b/src/pages/2017-01-21-Programmatic-button-generation.mdx
@@ -5,7 +5,7 @@ date:   2017-01-03 20:58 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Programmatically generating a button in Android
 
