--- a/src/pages/2017-01-21-Thoughts-and-such.mdx
+++ b/src/pages/2017-01-21-Thoughts-and-such.mdx
@@ -5,7 +5,7 @@ date:   2017-02-20 21:30 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Thoughts and such.
 
