--- a/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
+++ b/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
@@ -5,7 +5,7 @@ date:   2018-03-25 00:00 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy policy - Strayamate
 <br/>
