--- a/src/pages/2019-01-13-Footy-Stars.mdx
+++ b/src/pages/2019-01-13-Footy-Stars.mdx
@@ -5,7 +5,7 @@ date:   2019-01-13 13:42 +1100
 categories: post
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Footy Stars
 
