--- a/src/pages/2019-05-02-Zen-of-conferences.mdx
+++ b/src/pages/2019-05-02-Zen-of-conferences.mdx
@@ -5,7 +5,7 @@ date:   2019-05-02 13:42 +1100
 
 import sydney from "./images/sydney.jpg";
 
-<div className="blog">
+<div className="blogText">
 
 # Zen of conferences
 
