--- a/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
+++ b/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
@@ -3,7 +3,7 @@ title:  "Privacy Policy - Aussie slang action on Google"
 date:   2019-05-14 13:42 +1100
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Aussie slang action on Google
 <br/>
