--- a/src/pages/2019-06-01-IO-2019-a11y.mdx
+++ b/src/pages/2019-06-01-IO-2019-a11y.mdx
@@ -5,7 +5,7 @@ date:   2019-05-31 19:42 +1100
 
 import a11y from './images/a11y-2019.mp4';
 
-<div className="blog">
+<div className="blogText">
 
 # I/O 2019 and a11y
 
