--- a/src/pages/2019-12-08-Huxtable-Android-Privacy-Policy.mdx
+++ b/src/pages/2019-12-08-Huxtable-Android-Privacy-Policy.mdx
@@ -3,7 +3,7 @@ title:  "Privacy Policy - Huxtable (Android)"
 date:   2020-02-12 13:42 +1100
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Huxtable (Android)
 <br/>
