--- a/src/pages/2019-12-08-Huxtable-Privacy-Policy.mdx
+++ b/src/pages/2019-12-08-Huxtable-Privacy-Policy.mdx
@@ -3,7 +3,7 @@ title: "Privacy Policy - Huxtable"
 date:   2019-12-08 13:42 +1100
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Huxtable
 <br/>
