--- a/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
+++ b/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
@@ -3,7 +3,7 @@ title: "Privacy Policy - Handwash Hygiene"
 date:   2020-03-06 13:42 +1100
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Handwash Hygiene
 <br/>
