--- a/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
+++ b/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
@@ -3,7 +3,7 @@ title:  "Privacy Policy - Particle Paradox"
 date:   2020-05-08 13:42 +1100
 ---
 
-<div className="blog">
+<div className="blogText">
 
 # Privacy Policy - Particle Paradox
 <br/>
