--- a/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
+++ b/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
@@ -5,7 +5,7 @@ date:   2020-08-22 14:00 +1100
 
 import  review_test from './images/review_test.mp4';
 
-<div className="blog">
+<div className="blogText">
 
 
 # Finally! In-App Reviews for Android using Playcore
