--- a/src/pages/2016-12-30-License-details.mdx
+++ b/src/pages/2016-12-30-License-details.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/blog/license-details"
+slug: "2016-12-30-License-details"
 title:  "License details"
 date:   2016-12-30 07:42 +1100
 categories: post
