--- a/src/pages/2016-12-30-why-dropbox.mdx
+++ b/src/pages/2016-12-30-why-dropbox.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/blog/why-dropbox"
+slug: "2016-12-30-why-dropbox"
 title:  "Why Dropbox?"
 date:   2016-12-30 19:42 +1100
 categories: post
