--- a/src/pages/2019-01-13-Footy-Stars.mdx
+++ b/src/pages/2019-01-13-Footy-Stars.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/blog/privacy-policy-footy-stars-android"
+slug: "2019-01-13-Footy-Stars"
 title:  "Privacy Policy - Footy Stars"
 date:   2019-01-13 13:42 +1100
 categories: post
