--- a/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
+++ b/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/blog/testing-android-q-beta"
+slug: "2019-03-18-Testing Android Q beta without an actual Pixel device is hard"
 title:  "Testing Android Q beta without a Pixel device is hard."
 date:   2019-03-18 19:30 +1100
 categories: post
