--- a/src/pages/2019-04-06-In-App-Billing-implementation-v1.2.mdx
+++ b/src/pages/2019-04-06-In-App-Billing-implementation-v1.2.mdx
@@ -1,5 +1,5 @@
 ---
-title:  "In-App Billing in Android - v1.2"
+title:  "2019-04-06-In-App-Billing-implementation-v1.2"
 date:   2019-04-06 19:30 +1100
 ---
 
