--- a/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
+++ b/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
@@ -1,4 +1,5 @@
 ---
+slug: "2020-02-09-Huxtable-Preview-Android-iPhone"
 title:  "App Preview - The Huxtable Saga (Android and iPhone)"
 date:   2020-02-12 13:42 +1100
 ---
