--- a/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
+++ b/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
@@ -1,4 +1,5 @@
 ---
+slug: "2020-04-25-Testing-Behaviour-Changes-Android-11"
 title:  "Testing behaviour changes in Android 11"
 date:   2020-04-25 19:00 +1100
 ---
