--- a/src/pages/2016-12-31-Privacy-Policy.mdx
+++ b/src/pages/2016-12-31-Privacy-Policy.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/blog/privacy-policy"
+slug: "2016-12-31-Privacy-Policy"
 title:  "Privacy Policy - Address book sync"
 date:   2016-12-31 13:42 +1100
 categories: post
