--- a/src/pages/2017-01-21-Thoughts-and-such.mdx
+++ b/src/pages/2017-01-21-Thoughts-and-such.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/blog/thoughts-and-such"
+slug: "2017-01-21-Thoughts-and-such"
 title:  "Thoughts and such."
 date:   2017-02-20 21:30 +1100
 categories: post
