--- a/src/pages/2019-05-02-Zen-of-conferences.mdx
+++ b/src/pages/2019-05-02-Zen-of-conferences.mdx
@@ -1,4 +1,5 @@
 ---
+slug: "2019-05-02-Zen-of-conferences"
 title:  "Privacy Policy - Aussie slang action on Google"
 date:   2019-05-02 13:42 +1100
 ---
