--- a/src/pages/2019-12-08-Huxtable-Android-Privacy-Policy.mdx
+++ b/src/pages/2019-12-08-Huxtable-Android-Privacy-Policy.mdx
@@ -1,4 +1,5 @@
 ---
+slug: "2019-12-08-Huxtable-Android-Privacy-Policy"
 title:  "Privacy Policy - Huxtable (Android)"
 date:   2020-02-12 13:42 +1100
 ---
