--- a/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
+++ b/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
@@ -1,4 +1,5 @@
 ---
+slug: "2020-05-08-Particle-Paradox-Privacy-Policy"
 title:  "Privacy Policy - Particle Paradox"
 date:   2020-05-08 13:42 +1100
 ---
