add backnav to blog pages

--- a/src/pages/2016-12-30-Does-this-even-work.mdx
+++ b/src/pages/2016-12-30-Does-this-even-work.mdx
@@ -6,6 +6,12 @@ date:   2016-12-30 07:42 +1100
 
 import '../style/main.scss';
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Does this even work?
