remove wrong tag

--- a/src/pages/2016-12-30-Does-this-even-work.mdx
+++ b/src/pages/2016-12-30-Does-this-even-work.mdx
@@ -12,6 +12,8 @@ import '../style/main.scss';
     </a>
 </div>
 
+<div className="blogText">
+
 # Does this even work?
 
 Well it certainly seems to work. This is my first post on this static site and I tell you what, I am going to try and document how I got here.
