fix blog pages and list

--- a/src/pages/2016-12-30-License-details.mdx
+++ b/src/pages/2016-12-30-License-details.mdx
@@ -5,6 +5,12 @@ date:   2016-12-30 07:42 +1100
 categories: post
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # License details
