--- a/src/pages/2017-01-21-Programmatic-button-generation.mdx
+++ b/src/pages/2017-01-21-Programmatic-button-generation.mdx
@@ -5,6 +5,12 @@ date:   2017-01-03 20:58 +1100
 categories: post
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Programmatically generating a button in Android
