--- a/src/pages/2017-01-21-Thoughts-and-such.mdx
+++ b/src/pages/2017-01-21-Thoughts-and-such.mdx
@@ -5,6 +5,12 @@ date:   2017-02-20 21:30 +1100
 categories: post
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Thoughts and such.
