--- a/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
+++ b/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
@@ -5,6 +5,12 @@ date:   2018-03-25 00:00 +1100
 categories: post
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy policy - Strayamate
