--- a/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
+++ b/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
@@ -7,6 +7,12 @@ categories: post
 
 import below from './images/elbow.webm';
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 ## Android Q Beta.
