--- a/src/pages/2019-04-14-Foldable-emulators-in-Android-Studio.mdx
+++ b/src/pages/2019-04-14-Foldable-emulators-in-Android-Studio.mdx
@@ -7,6 +7,12 @@ date:   2019-04-14 19:30 +1100
 
 import foldable_emulators from './images/foldable_emulators.mp4'
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 ## Foldable emulators in Android Studio - or as I like to call it, the beginning of the end
