--- a/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
+++ b/src/pages/2020-04-25-Testing-Behaviour-Changes-Android-11.mdx
@@ -7,6 +7,12 @@ date:   2020-04-25 19:00 +1100
 import behaviour_changes from './images/behaviour_changes.webm';
 
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Testing behaviour changes in Android 11
