--- a/src/pages/2017-03-31-Privacy-Policy-StrayaMate.mdx
+++ b/src/pages/2017-03-31-Privacy-Policy-StrayaMate.mdx
@@ -5,6 +5,13 @@ date:   2017-03-31 13:42 +1100
 categories: post
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
+
 <div className="blogText">
 
 # Privacy Policy - Strayamate
