--- a/src/pages/2018-03-25-Privacy-Policy-TurntApp-iOS.mdx
+++ b/src/pages/2018-03-25-Privacy-Policy-TurntApp-iOS.mdx
@@ -5,6 +5,12 @@ date:   2018-09-11 00:00 +1100
 categories: app-privacy-policy
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 
 <div className="blogText">
 
