--- a/src/pages/2019-01-13-Footy-Stars.mdx
+++ b/src/pages/2019-01-13-Footy-Stars.mdx
@@ -5,6 +5,12 @@ date:   2019-01-13 13:42 +1100
 categories: post
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy Policy - Footy Stars
