--- a/src/pages/2019-04-06-In-App-Billing-implementation-v1.2.mdx
+++ b/src/pages/2019-04-06-In-App-Billing-implementation-v1.2.mdx
@@ -8,6 +8,12 @@ import video from './images/billing/strayamate-demo.webm';
 import in_app_products from './images/billing/in-app-products.png';
 import add_product from './images/billing/add-product.png';
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # A continuation.
