--- a/src/pages/2019-05-02-Zen-of-conferences.mdx
+++ b/src/pages/2019-05-02-Zen-of-conferences.mdx
@@ -6,6 +6,12 @@ date:   2019-05-02 13:42 +1100
 
 import sydney from "./images/sydney.jpg";
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Zen of conferences
