--- a/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
+++ b/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
@@ -4,6 +4,12 @@ title:  "Privacy Policy - Aussie slang action on Google"
 date:   2019-05-14 13:42 +1100
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy Policy - Aussie slang action on Google
