--- a/src/pages/2019-12-08-Huxtable-Android-Privacy-Policy.mdx
+++ b/src/pages/2019-12-08-Huxtable-Android-Privacy-Policy.mdx
@@ -4,6 +4,12 @@ title:  "Privacy Policy - Huxtable (Android)"
 date:   2020-02-12 13:42 +1100
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy Policy - Huxtable (Android)
