--- a/src/pages/2019-12-08-Huxtable-Privacy-Policy.mdx
+++ b/src/pages/2019-12-08-Huxtable-Privacy-Policy.mdx
@@ -4,6 +4,12 @@ title: "Privacy Policy - Huxtable"
 date:   2019-12-08 13:42 +1100
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy Policy - Huxtable
