--- a/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
+++ b/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
@@ -4,6 +4,12 @@ title: "Privacy Policy - Handwash Hygiene"
 date:   2020-03-06 13:42 +1100
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy Policy - Handwash Hygiene
