--- a/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
+++ b/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
@@ -4,6 +4,12 @@ title:  "Privacy Policy - Particle Paradox"
 date:   2020-05-08 13:42 +1100
 ---
 
+<div className="blogpage">
+    <a href={"/blog"} smooth duration={1000}>
+    {"Back"}
+    </a>
+</div>
+
 <div className="blogText">
 
 # Privacy Policy - Particle Paradox
