--- a/src/pages/2020-12-26-A-neat-trick-for-testing-on-the-Play-Store.mdx
+++ b/src/pages/2020-12-26-A-neat-trick-for-testing-on-the-Play-Store.mdx
@@ -39,11 +39,11 @@ Firstly, let's do a quick recap of how test apk and aab distribution works on th
 Usually when we setup Internal and Alpha testers (testers within our own organisation), we add said testers' Google emails to a 
 distribution list on the Play Console, like so
 
-<img className="image" src= { tester_distribution_list } width="50%"/>
+<img className="image" src= { tester_distribution_list } width="500"/>
 
 Once this is set up, the user then goes to the internal or alpha testing link generated for the said track on the Play console:
 
-<img className="image" src= { tester_link } width="20%"/>
+<img className="image" src= { tester_link } width="500"/>
 
 When the user goes to the opt-in URL on their device, they can opt into testing the app like so
 
@@ -63,25 +63,25 @@ Well, here's a neat trick.
 
 You might already know that the Play Store app allows multiple login accounts. These can be switched by tapping the Avatar picture of your account:
 
-<img className="image" src= { switch_accounts } width="20%"/>
+<img className="image" src= { switch_accounts } width="500"/>
 <br/>
 <br/>
 
 Before doing this though, you need to clear the cache of the Play Store app. This is done by going to the Play Store's app's settings.
 
-<img className="image" src={ play_settings1 } width="15%" />
+<img className="image" src={ play_settings1 } width="500" />
 
 <br/>
 <br/>
 
-<img className="image" src={ play_settings2 } width="15%" />
+<img className="image" src={ play_settings2 } width="500" />
 
 <br/>
 <br/>
 
 Now if you switch accounts to an account that is NOT on the tester distribution list, you should be able to download the production binary!
 
-<img className="image" src={ play_store } width="15%" />
+<img className="image" src={ play_store } width="500" />
 
 <br/>
 <br/>
@@ -91,6 +91,6 @@ Now if you switch accounts to an account that is NOT on the tester distribution 
 If you get a warning such as the one below -- the Play store cache has not been cleared properly! This means Play Store is remembering that one
 of your accounts is on the tester distribution list! Just follow the steps above to clear the cache and data for the Play Store app!ß
 
-<img className="image" src= { play_store_gotcha } width="15%" />
+<img className="image" src= { play_store_gotcha } width="500" />
 
 </div>
