--- a/src/pages/2017-01-03-Multiple-EditTexts-in-Android.mdx
+++ b/src/pages/2017-01-03-Multiple-EditTexts-in-Android.mdx
@@ -2,7 +2,7 @@
 slug: "2017-01-03-Multiple-EditTexts-in-Android"
 title:  "Multiple EditTexts in Android"
 date:   2017-01-03 07:42 +1100
-categories: post
+categories: "post"
 ---
 
 import three from './images/3.png';
