only save blogs to the blog page

--- a/src/pages/2016-12-30-Does-this-even-work.mdx
+++ b/src/pages/2016-12-30-Does-this-even-work.mdx
@@ -2,6 +2,7 @@
 slug: "2016-12-30-Does-this-even-work"
 title:  "Does this even work?"
 date:   2016-12-30 07:42 +1100
+categories: "blog"
 ---
 
 import '../style/main.scss';
