--- a/src/pages/2016-12-30-why-dropbox.mdx
+++ b/src/pages/2016-12-30-why-dropbox.mdx
@@ -2,7 +2,7 @@
 slug: "2016-12-30-why-dropbox"
 title:  "Why Dropbox?"
 date:   2016-12-30 19:42 +1100
-categories: post
+categories: "blog"
 ---
 
 <div className="blogpage">
