--- a/src/pages/2017-01-21-Programmatic-button-generation.mdx
+++ b/src/pages/2017-01-21-Programmatic-button-generation.mdx
@@ -2,7 +2,7 @@
 slug: "2017-01-21-Programmatic-button-generation"
 title:  "Programmatically generating a button in Android"
 date:   2017-01-03 20:58 +1100
-categories: post
+categories: "post"
 ---
 
 <div className="blogpage">
