--- a/src/pages/2017-11-17-Google-Play-games-for-fun-and-profit-but-mostly-fun.mdx
+++ b/src/pages/2017-11-17-Google-Play-games-for-fun-and-profit-but-mostly-fun.mdx
@@ -2,7 +2,7 @@
 slug: "2017-11-17-Google-Play-games-for-fun-and-profit-but-mostly-fun"
 title:  "Google play games API for fun and profit - but mostly only fun."
 date:   2017-11-17 19:30 +1100
-categories: post
+categories: "blog"
 ---
 
 import play_games_app from './images/play-games/play-games-app.png';
