--- a/src/pages/2017-12-09-App-monetisation-and-In-App-Billing-implementation.mdx
+++ b/src/pages/2017-12-09-App-monetisation-and-In-App-Billing-implementation.mdx
@@ -2,7 +2,7 @@
 slug: "2017-12-09-App-monetisation-and-In-App-Billing-implementation"
 title:  "App monetisation and In-App Billing in Android."
 date:   2017-12-08 19:30 +1100
-categories: post
+categories: "blog"
 ---
 
 
