--- a/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
+++ b/src/pages/2018-03-25-Privacy-Policy-Strayamate-iOS.mdx
@@ -2,7 +2,7 @@
 slug: "2018-03-25-Privacy-Policy-Strayamate-iOS"
 title:  "Privacy policy - Strayamate"
 date:   2018-03-25 00:00 +1100
-categories: post
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
