--- a/src/pages/2018-03-25-Privacy-Policy-TurntApp-iOS.mdx
+++ b/src/pages/2018-03-25-Privacy-Policy-TurntApp-iOS.mdx
@@ -2,7 +2,7 @@
 slug: "2018-03-25-Privacy-Policy-TurntApp-iOS"
 title:  "Privacy policy - TurntApp"
 date:   2018-09-11 00:00 +1100
-categories: app-privacy-policy
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
