--- a/src/pages/2019-01-13-Footy-Stars.mdx
+++ b/src/pages/2019-01-13-Footy-Stars.mdx
@@ -2,7 +2,7 @@
 slug: "2019-01-13-Footy-Stars"
 title:  "Privacy Policy - Footy Stars"
 date:   2019-01-13 13:42 +1100
-categories: post
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
