--- a/src/pages/2019-01-30-Strayamate-Lite.mdx
+++ b/src/pages/2019-01-30-Strayamate-Lite.mdx
@@ -2,6 +2,7 @@
 slug: "2019-01-30-Strayamate-Lite"
 title:  "Privacy Policy - Strayamate Free"
 date:   2019-01-30
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
