--- a/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
+++ b/src/pages/2019-03-18-Testing Android Q beta without an actual Pixel device is hard.mdx
@@ -2,7 +2,7 @@
 slug: "2019-03-18-Testing Android Q beta without an actual Pixel device is hard"
 title:  "Testing Android Q beta without a Pixel device is hard."
 date:   2019-03-18 19:30 +1100
-categories: post
+categories: "blog"
 ---
 
 import below from './images/elbow.webm';
