--- a/src/pages/2019-04-06-In-App-Billing-implementation-v1.2.mdx
+++ b/src/pages/2019-04-06-In-App-Billing-implementation-v1.2.mdx
@@ -2,6 +2,7 @@
 slug: "2019-04-06-In-App-Billing-implementation-v1.2"
 title:  "In-App-Billing-implementation-v1.2"
 date:   2019-04-06 19:30 +1100
+categories: "blog"
 ---
 
 import video from './images/billing/strayamate-demo.webm';
