--- a/src/pages/2019-04-14-Foldable-emulators-in-Android-Studio.mdx
+++ b/src/pages/2019-04-14-Foldable-emulators-in-Android-Studio.mdx
@@ -2,6 +2,7 @@
 slug: "2019-04-14-Foldable-emulators-in-Android-Studio"
 title:  "Foldable emulators in Android Studio - or as I like to call it, the beginning of the end"
 date:   2019-04-14 19:30 +1100
+categories: "blog"
 ---
 
 
