--- a/src/pages/2019-05-02-Zen-of-conferences.mdx
+++ b/src/pages/2019-05-02-Zen-of-conferences.mdx
@@ -2,6 +2,7 @@
 slug: "2019-05-02-Zen-of-conferences"
 title:  "Zen of conferences"
 date:   2019-05-02 13:42 +1100
+categories: "blog"
 ---
 
 import sydney from "./images/sydney.jpg";
