--- a/src/pages/2019-09-28-Relasing-an-app.mdx
+++ b/src/pages/2019-09-28-Relasing-an-app.mdx
@@ -2,6 +2,7 @@
 slug: "2019-09-28-Relasing-an-app"
 title:  "App releases on the Play console"
 date:   2019-09-28 14:00 +1100
+categories: "blog"
 ---
 
 import internal_app1 from './images/internal-app1.png';
