--- a/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
+++ b/src/pages/2020-08-22-In-App-Reviews-PlayCore-API.mdx
@@ -2,6 +2,7 @@
 slug: "2020-08-22-In-App-Reviews-PlayCore-API"
 title:  "Finally! In-App Reviews for Android using Playcore"
 date:   2020-08-22 14:00 +1100
+categories: "blog"
 ---
 
 import  review_test from './images/review_test.mp4';
