--- a/src/pages/2016-12-30-License-details.mdx
+++ b/src/pages/2016-12-30-License-details.mdx
@@ -2,7 +2,7 @@
 slug: "2016-12-30-License-details"
 title:  "License details"
 date:   2016-12-30 07:42 +1100
-categories: post
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
