--- a/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
+++ b/src/pages/2019-05-14-Privacy-Policy - Aussie slang action on Google.mdx
@@ -2,6 +2,7 @@
 slug: "2019-05-14-Privacy-Policy - Aussie slang action on Google"
 title:  "Privacy Policy - Aussie slang action on Google"
 date:   2019-05-14 13:42 +1100
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
