--- a/src/pages/2019-06-01-IO-2019-a11y.mdx
+++ b/src/pages/2019-06-01-IO-2019-a11y.mdx
@@ -2,6 +2,7 @@
 slug: "2019-06-01-IO-2019-a11y"
 title:  "I/O 2019 and a11y"
 date:   2019-05-31 19:42 +1100
+categories: "blog"
 ---
 
 import a11y from './images/a11y-2019.mp4';
