--- a/src/pages/2019-12-08-Huxtable-Privacy-Policy.mdx
+++ b/src/pages/2019-12-08-Huxtable-Privacy-Policy.mdx
@@ -2,6 +2,7 @@
 slug: "2019-12-08-Huxtable-Privacy-Policy"
 title: "Privacy Policy - Huxtable"
 date:   2019-12-08 13:42 +1100
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
