--- a/src/pages/2019-12-09-Huxtable-Preview.mdx
+++ b/src/pages/2019-12-09-Huxtable-Preview.mdx
@@ -2,6 +2,7 @@
 slug: "2019-12-09-Huxtable-Preview"
 title:  "App Preview - Huxtable"
 date:   2019-12-09 13:42 +1100
+categories: "app-privacy-policy"
 ---
 <p align="center">
  <iframe width="544" height="640" src="../images/huxtable1.mp4" frameborder="0" allowfullscreen>
