--- a/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
+++ b/src/pages/2020-02-09-Huxtable-Preview-Android-iPhone.mdx
@@ -2,6 +2,7 @@
 slug: "2020-02-09-Huxtable-Preview-Android-iPhone"
 title:  "App Preview - The Huxtable Saga (Android and iPhone)"
 date:   2020-02-12 13:42 +1100
+categories: "app-privacy-policy"
 ---
 
 import huxtable_saga from './images/huxtable-saga.mp4';
