--- a/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
+++ b/src/pages/2020-03-06-Privacy-Policy - Handwash Hygiene.mdx
@@ -2,6 +2,7 @@
 slug: "2020-03-06-Privacy-Policy - Handwash Hygiene"
 title: "Privacy Policy - Handwash Hygiene"
 date:   2020-03-06 13:42 +1100
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
