--- a/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
+++ b/src/pages/2020-05-08-Particle-Paradox-Privacy-Policy.mdx
@@ -2,6 +2,7 @@
 slug: "2020-05-08-Particle-Paradox-Privacy-Policy"
 title:  "Privacy Policy - Particle Paradox"
 date:   2020-05-08 13:42 +1100
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
