--- a/src/pages/2020-12-26-A-neat-trick-for-testing-on-the-Play-Store.mdx
+++ b/src/pages/2020-12-26-A-neat-trick-for-testing-on-the-Play-Store.mdx
@@ -2,6 +2,7 @@
 slug: "2020-12-26-A-neat-trick-for-testing-on-the-Play-Store"
 title:  "A neat trick for testing on the Play store"
 date:   2020-12-26 14:00 +1100
+categories: "blog"
 ---
 
 import  tester_distribution_list from './images/tester_distribution_list.png';
