--- a/src/pages/2021-04-14-Privacy-Policy-Anzac-day-stickers.mdx
+++ b/src/pages/2021-04-14-Privacy-Policy-Anzac-day-stickers.mdx
@@ -2,7 +2,7 @@
 slug: "2021-04-14-Privacy-Policy-Anzac-day-stickers"
 title:  "Privacy policy - Anzac day stickers"
 date:   2021-04-14 00:00 +1100
-categories: app-privacy-policy
+categories: "app-privacy-policy"
 ---
 
 <div className="blogpage">
